--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             onclick="document.getElementById('fadebox').style.visibility='hidden'; 
             document.getElementById('popbox').style.visibility='hidden';
             document.getElementById('popup-font').style.visibility='hidden';
-            document.getElementById('pay').style.visibility='hidden'"</a></center>
+            document.getElementById('pay').style.visibility='hidden'"</img></a></center>
     </div>
 
     <div id="box1">
@@ -262,10 +262,10 @@
             <p id="ppl-text">Oliver Chen is the visionary behind Save Monkey, establishing the organization with a deep passion for primate conservation. His commitment to preserving endangered species has driven the organization from its inception, guiding its mission to create sustainable and impactful solutions. Oliver's leadership and dedication continue to inspire the team and shape the direction of our initiatives.</p>
         </td>
         <td>
-            <p id="ppl-text">Charles Chung, our lead scientist and researcher, is at the forefront of our conservation efforts. With extensive experience in primate biology and a focus on innovative research, he spearheads our scientific endeavors, ensuring that our strategies are both effective and evidence-based. His work is crucial in developing and implementing solutions that have a lasting impact on primate populations.</p>
+            <p id="ppl-text">Kyle Lee, our public relations manager plays a vital role in spreading the word about Save Monkey's mission and achievements. He work diligently to engage with communities, media, and stakeholders, building strong relationships and raising awareness of our cause. Through his efforts, we are able to connect with a broader audience, garnering support and driving change in primate conservation.</p>
         </td>
         <td>
-            <p id="ppl-text">Kyle Lee, our public relations manager plays a vital role in spreading the word about Save Monkey's mission and achievements. He work diligently to engage with communities, media, and stakeholders, building strong relationships and raising awareness of our cause. Through his efforts, we are able to connect with a broader audience, garnering support and driving change in primate conservation.</p>
+            <p id="ppl-text">Charles Chung, our lead scientist and researcher, is at the forefront of our conservation efforts. With extensive experience in primate biology and a focus on innovative research, he spearheads our scientific endeavors, ensuring that our strategies are both effective and evidence-based. His work is crucial in developing and implementing solutions that have a lasting impact on primate populations.</p>
         </td>
     </br>
     </table>
