--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
 
 <Head>
-	<Title>COOL</Title>
+	<Title>Save Monkey</Title>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
 </Head>
 <style type="text/css">
     #fadebox{
@@ -207,7 +211,6 @@
 <body bgcolor="white">
     <div id="fadebox"></div>
     <div id="popbox">
-        
         <button type="button" id="exit" 
         onclick="document.getElementById('fadebox').style.visibility='hidden'; 
             document.getElementById('popbox').style.visibility='hidden';
