--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
         color: black;
         top: 48%;
         left: 25%;
-        cursor: pointer;}
+        cursor: pointer;
+        animation: bn53bounce 4s infinite;}
     #exit {
         background-color: gray;
 
