--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         position: fixed;
         top: -1;
         left: -1;
-        z-index: 10;
+        z-index: 10000;
         opacity: 0.9;
     }
     #popbox{
@@ -22,7 +22,7 @@
         position: fixed;
         top: 25%;
         left: 40%;
-        z-index: 11;
+        z-index: 10001;
         opacity: 1;
         border-radius: 25px;
     }
@@ -291,7 +291,7 @@
     }
 
     .carousel-arrow:hover {
-        background-color: rgba(0, 0, 0, 0.7); /* Change background color on hover */
+        background-color: transparent; /* Change background color on hover */
     }
 /*<img src="Paypal_2014_logo.png" id="pay" 
         onclick="document.getElementById('fadebox').style.visibility='hidden'; 
