--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
         justify-content: space-between;
         transform: translateY(-50%);
     }
+    #instagram-container {
+        padding-bottom: 50px; /* Adjust based on your layout */
+        background-color: white;
+    }
 
     .carousel-controls button {
         background-color: rgba(0, 0, 0, 0.5);
@@ -380,7 +384,11 @@
         </td>
     </br>
     </table>
-    <div id="box-last">
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+    <div id="instagram-container">
+        <div class="elfsight-app-02f20318-7056-4b1a-9410-c973a96775c8" data-elfsight-app-lazy></div>
+    </div>
+    <footer><div id="box-last">
         <table>
             <tr>
                 <center><td><img src="pixil-frame-0.png" height="100"></td></center>
@@ -393,7 +401,7 @@
                 </td></center>
             </tr>
         </table>
-    </div>
+    </div></footer>
     <script>
     let currentIndex = 0;
     const slides = document.querySelectorAll('.carousel img');
@@ -432,8 +440,6 @@
             }
     });
 }
-
     </script>
-</body>
 
 </html>
